[ci skip] tweaks the social card image to avoid having it appear blurry c58f80f33e3e9731a4be92fa65bd16296dafee7d

--- a/static/main.css
+++ b/static/main.css
@@ -526,4 +526,5 @@ a.content-list--entry {
     border-top: 8px dashed rgba(255, 255, 255, 0.5);
     margin: 4em 0;
     padding: 2em 0;
+    max-width: 1200px;
 }
